[gd_scene load_steps=12 format=3 uid="uid://co10ppxd8ssif"]

[ext_resource type="Script" uid="uid://ciqk5rq51nyxu" path="res://Scripts/Player/Turrets/shotgun_turret.gd" id="1_vsa14"]
[ext_resource type="Texture2D" uid="uid://duacpcpurvjsn" path="res://Assets/Images/sprites/Player/shotgun/shotgun-turret.png" id="2_7htvp"]
[ext_resource type="Texture2D" uid="uid://x7lw5src1g6d" path="res://Assets/Images/SpriteSheets/UI/Spritesheet_Animation_UI_Hologram_Select_01a_.png" id="3_raawa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p4tx0"]
atlas = ExtResource("3_raawa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jggcv"]
atlas = ExtResource("3_raawa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bj12"]
atlas = ExtResource("3_raawa")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndaed"]
atlas = ExtResource("3_raawa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hrhk6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4tx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jggcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bj12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndaed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndaed")
}],
"loop": false,
"name": &"fire",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_g6ik3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -2)]
}

[sub_resource type="Animation" id="Animation_v2mp8"]
resource_name = "fire"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.333333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"fire_bullets"
}, {
"args": [],
"method": &"play_unload_sound"
}, {
"args": [],
"method": &"eject_shells"
}, {
"args": [],
"method": &"play_load_sound"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.2),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, -3), Vector2(0, -2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_57i0a"]
_data = {
&"RESET": SubResource("Animation_g6ik3"),
&"fire": SubResource("Animation_v2mp8")
}

[node name="ShotgunTurret" type="Node2D"]
use_parent_material = true
script = ExtResource("1_vsa14")
base_load_time = 0.8
base_damage = 45.0
bullet_sfx = "ShotgunFireSFX"
missle_scale = 0.5

[node name="Sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
scale = Vector2(5, 5)
texture = ExtResource("2_7htvp")
offset = Vector2(0, -2)
hframes = 9

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(-10, -65)

[node name="SpawnPoint2" type="Node2D" parent="."]
position = Vector2(10, -65)

[node name="Eject_L" type="Node2D" parent="."]
position = Vector2(-10, 5)

[node name="Eject_R" type="Node2D" parent="."]
position = Vector2(10, 5)

[node name="Aim" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.435294)
z_index = 999
position = Vector2(0, -300)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_hrhk6")
animation = &"fire"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_57i0a")
}
